Fix contrast with links

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -27,3 +27,8 @@
   width: 5em;
   margin: auto;
 }
+
+
+.is-primary {
+    --bulma-link-text: #D6DBFF;
+}
